# crayfish

./: CMakeLists.txt  README.md  configure.sh  debug.sh  run.sh
src/: Camera.cpp  Camera.h  CameraOrtho.cpp  CameraOrtho.h  CameraPerspective.cpp  CameraPerspective.h  Config.cpp  Config.h  Material.cpp  Material.h  MaterialLit.cpp  MaterialLit.h  Model.cpp  Model.h  Random.cpp  Random.h  RenderFrame.cpp  RenderFrame.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneNodeCamera.cpp  SceneNodeCamera.h  SceneNodeCameraOrtho.cpp  SceneNodeCameraOrtho.h  SceneNodeCameraPerspective.cpp  SceneNodeCameraPerspective.h  SceneNodeModel.cpp  SceneNodeModel.h  ShaderFragment.cpp  ShaderFragment.h  ShaderFragmentLit.cpp  ShaderFragmentLit.h  Texture2d.cpp  Texture2d.h  Triangle.cpp  Triangle.h  Vertex.h  main.cpp
